--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,21 @@ html {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+.hover-tooltip::after {
+    content: attr(title);
+    position: absolute;
+    bottom: calc(100% + 5px);
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 3px;
+    background-color: #333;
+    color: white;
+    border-radius: 3px;
+    font-size: 12px;
+    opacity: 0;
+}
+
+.hover-tooltip:hover::after {
+    opacity: 1;
+}
